# web-planetarium

./: .hgignore  Data  css.css  index.html  load.js  test.hs  web-planetarium.cabal
JavaScript/: Canvas.hs  FRP.hs  Utils.hs
Planetarium/: Camera.hs  Catalogs.hs  Planetarium.hs  Rendering.hs
Web/: FRP.hs  JQ.hs
data/: constellation-lines-coord.json  constellation-lines.json
